# hand-gesture

./: .gitignore  gemini_test.py  hand_poem_creator.py  hand_track.py  main.py  package-lock.json  poems_20250820_160555.json  poems_20250820_161348.json  pyproject.toml  readme.md
poems/: poem_20250825_083159.json  poem_20250825_083837.json  poems_20250820_161926.json
